@@ -30,14 +30,7 @@ Grid {
                 gameDisplay.dropCommentFocus()
                 piecePicked(modelData)
             }
-            hoverEnabled: isDesktop
-            scale: isDesktop && containsMouse
-                   && ! playerModel.isGenMoveRunning && ! gameModel.isGameOver
-                   && (modelData.pieceModel.color === gameModel.toPlay || setupMode)
-                   ? 1.2 : 1.0
             Component.onCompleted: modelData.parentUnplayed = mouseArea
-
-            Behavior on scale { NumberAnimation { duration: 20 } }
         }
     }
 }
