@@ -10,7 +10,6 @@ Row {
     id: root
 
     property real pointSize
-    property int toPlay: gameModel.isGameOver ? -1 : gameModel.toPlay
     property int altPlayer: gameModel.altPlayer
     property real points0: gameModel.points0
     property real points1: gameModel.points1
@@ -49,7 +48,6 @@ Row {
         value: points0
         bonus: bonus0
         isFinal: ! hasMoves0
-        isToPlay: toPlay == 0
         pointSize: root.pointSize
         height: root.height
         width: 5 * pointSize
@@ -61,7 +59,6 @@ Row {
         value: points1
         bonus: bonus1
         isFinal: ! hasMoves1
-        isToPlay: toPlay == 1
         pointSize: root.pointSize
         height: root.height
         width: 5 * pointSize
@@ -74,7 +71,6 @@ Row {
         value: points2
         bonus: bonus2
         isFinal: ! hasMoves2
-        isToPlay: toPlay == 2
         pointSize: root.pointSize
         height: root.height
         width: 5 * pointSize
@@ -85,7 +81,6 @@ Row {
         value: points3
         bonus: bonus3
         isFinal: ! hasMoves3
-        isToPlay: toPlay == 3
         pointSize: root.pointSize
         height: root.height
         width: 5 * pointSize
@@ -95,7 +90,6 @@ Row {
         visible: gameModel.gameVariant == "classic_3"
         value: points3
         isAltColor: true
-        isToPlay: toPlay == 3
         isFinal: ! hasMoves3
         pointSize: root.pointSize
         height: root.height
