@@ -11,7 +11,6 @@ Item {
 
     property alias color: point.color
     property bool isFinal
-    property bool isToPlay
     property real value
     property real bonus
     property real pointSize
@@ -19,11 +18,7 @@ Item {
     Rectangle {
         id: point
 
-        width: (isToPlay ? 1.3 : 1) * pointSize
-        border {
-            color: Qt.lighter(color, 1.7 - 1.4 * theme.colorBackground.hslLightness)
-            width: isToPlay ? Math.max(0.15 * pointSize, 1) : 0
-        }
+        width: pointSize
         height: width
         radius: width / 2
         anchors.verticalCenter: root.verticalCenter
@@ -38,7 +33,7 @@ Item {
         opacity: 0.9 - 0.15 * theme.colorBackground.hslLightness
         anchors {
             left: point.right
-            leftMargin: (isToPlay ? 0.2 : 0.4) * point.width
+            leftMargin: 0.4 * point.width
             verticalCenter: root.verticalCenter
         }
         verticalAlignment: Text.AlignVCenter
